--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "9.5.5",
     "next-auth": "^3.1.0",
     "react": "16.14.0",
@@ -25,6 +26,7 @@
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/spotify-api": "0.0.6",
     "@types/styled-components": "^5.1.4",
     "babel-plugin-styled-components": "^1.11.1",
     "npm-run-all": "^4.1.5",
