--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "next": "9.5.5",
     "next-auth": "^3.1.0",
+    "next-google-fonts": "^1.2.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "sqlite3": "^5.0.0",
