--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "9.5.5",
     "next-auth": "^3.1.0",
     "next-google-fonts": "^1.2.1",
+    "polished": "^4.0.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "sqlite3": "^5.0.0",
