--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "next": "9.5.5",
     "next-auth": "^3.1.0",
     "next-google-fonts": "^1.2.1",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^1.0.2",
+    "@types/chart.js": "^2.9.29",
     "@types/next-auth": "^3.1.20",
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
