--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
+    "howler": "^2.2.1",
     "next": "9.5.5",
     "next-auth": "^3.1.0",
     "next-google-fonts": "^1.2.1",
+    "next-transpile-modules": "^4.1.0",
     "polished": "^4.0.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "react-use-audio-player": "^1.2.4",
+    "siriwave": "^2.2.0",
     "sqlite3": "^5.0.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^1.0.2",
     "@types/chart.js": "^2.9.29",
+    "@types/howler": "^2.2.1",
     "@types/next-auth": "^3.1.20",
     "@types/node": "^14.11.10",
     "@types/react": "^16.9.53",
