--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
+    "framer-motion": "^3.3.0",
     "howler": "^2.2.1",
     "next": "9.5.5",
     "next-auth": "^3.1.0",
